# NotOkImageFormat

./: CMakeLists.txt  LICENSE  README.md  noi_image.h
examples/: batch.bat  lena.bat  lenna.bat  lenna_osx.sh
test/: impl.c  main.c
